infrastructure/openshift/risk-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: risk-service
  labels:
    app: risk-service
    tier: backend
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
      name: http
  selector:
    app: risk-service
